Tue Oct 24 13:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/os_socket.h:
	* ace/config-rtems.h:
	  Added ACE_LACKS_SOCKADDR

Tue Oct 24 12:54:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/os_netdb.h:
	* ace/config-rtems.h:
	  Added ACE_LACKS_HOSTENT

Tue Oct 24 12:09:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/OS_NS_arpa_inet.inl:
	* ace/config-rtems.h:
	  Added ACE_LACKS_INET_ADDR and ACE_LACKS_INET_NTOA

Tue Oct 24 12:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/sys/os_socket.h:
	  Define MSG_OOB when it is not defined

Tue Oct 24 11:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/OS_NS_sys_socket.inl:
        * ace/config-rtems.h:
	  Added ACE_LACKS_SOCKET, ACE_LACKS_SHUTDOWN and ACE_LACKS_SETSOCKOPT

Tue Oct 24 11:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/OS_NS_sys_select.inl:
        * ace/config-rtems.h:
	  Added ACE_LACKS_SELECT

Tue Oct 24 10:58:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ace/os_include/netinet/os_in.h:
        * ace/config-rtems.h:
	  Added ACE_LACKS_IN_ADDR and ACE_LACKS_SOCKADDR_IN

Tue Oct 24 06:31:05 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Numeric_Limits.h (ACE_Numeric_Limits):

          Added missing "char" specialization for the
          ACE_LACKS_NUMERIC_LIMITS case.  The "signed char" and
          "unsigned char" specializations are not always suitable.

Tue Oct 24 04:04:26 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Hash_Map_Manager_T.h (lock_):

          Placed "mutable" keyword to beginning of declaration.  It is a
          storage class specifier, not a CV qualifier, and belongs at the
          beginning.  Addresses g++ warnings.

        * ace/Sock_Connect.cpp (get_fqdn):

          Addressed "might be used uninitialized warnings.
