@@ -179,6 +179,7 @@
 # define ACE_LACKS_INET_ATON
 # define ACE_LACKS_INET_ADDR
 # define ACE_LACKS_INET_NTOA
+# define ACE_LACKS_GET_BCAST_ADDR
 
 // Missing OS features
 # define ACE_LACKS_UNIX_SYSLOG
