@@ -1,3 +1,9 @@
+Tue Oct 24 13:09:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+	* ace/Sock_Connect.cpp:
+	* ace/config-rtems.h:
+	  Added ACE_LACKS_GET_BCAST_ADDR
+
 Tue Oct 24 13:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* ace/os_include/os_socket.h:
